fix:align

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -31,7 +31,7 @@
   gap: 2rem;
 }
 
-@media (min-width: 764px) and (max-width: 1024px) {
+@media (min-width: 800px) and (max-width: 1024px) {
     .page-layout {
     grid-template-columns: 1fr;
     padding: 1rem;
